# helsing

./: .gitignore  LICENSE  README.md  helsing.c
helsing/: .gitignore  CMakeLists.txt  Makefile  configuration.h  configuration_adv.h
helsing/configuration/: algorithms.h  datatypes.h  numeral_base.h  other.h  output.h
helsing/scripts/: common_prefix.sh  runtime.sh  subtract_prefix.sh  system_info.sh  timeout.sh
helsing/scripts/configuration/: set.sh  set_cache.sh
helsing/scripts/optimal_partitions/: compare.sh  find.sh  plot_relative.py
helsing/scripts/partitions/: generate_parameters.sh
helsing/scripts/partitions/optimal/: find.sh
helsing/scripts/partitions/performance/: compare.sh  measure.sh  plot_relative.py
helsing/src/: main.c
helsing/src/array/: array.c  array.h
helsing/src/binary_tree/: bthandle.c  bthandle.h  btnode.c  btnode.h  btree.c  btree.h
helsing/src/checkpoint/: checkpoint.c  checkpoint.h
helsing/src/hash/: hash.c  hash.h
helsing/src/helper/: helper.c  helper.h
helsing/src/interval/: interval.c  interval.h
helsing/src/linked_list/: llhandle.c  llhandle.h  llist.c  llist.h  llnode.c  llnode.h
helsing/src/msentence/: msentence.h
helsing/src/options/: options.c  options.h
helsing/src/task/: task.c  task.h  taskboard.c  taskboard.h
helsing/src/thread/: mutex.c  mutex.h  targs.c  targs.h  targs_handle.c  targs_handle.h  thread.c  thread.h
helsing/src/tile/: matrix.c  matrix.h  tile.c  tile.h
helsing/src/vampire/: cache.c  cache.h  vargs.c  vargs.h
helsing/test/integration/: cache.sh  partitions.sh
